# oci-vue

./: .env.example  .gitignore  README.md  config.yaml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: windows-release.yml
data/: config.example.json
scripts/: export-env.sh
src/: App.test.ts  app.ts  router.ts  routes.ts  server.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  credentials.rs  errors.rs  lib.rs  main.rs  manifest.rs  models.rs  registry_client.rs  storage.rs
src-tauri/tests/: manifest_tests.rs  registry_client_tests.rs  storage_tests.rs
src/api/: tauri.ts
src/components/: AppShell.vue  ConnectionDialog.vue  ImageTable.test.ts  ImageTable.vue  LayerTable.test.ts  LayerTable.vue  ManifestDetail.vue  RegistrySelector.vue  TagList.vue
src/shared/: errors.ts  http.ts  mask.ts
src/stores/: registryStore.ts
src/test/: setup.ts
src/types/: registry.ts
src/views/: ImageDetailView.vue  ImageListView.vue
tests/: app.smoke.test.ts  frontend.static.test.ts  readme.smoke.test.ts  server.test.ts
tests/admin/: admin.page.smoke.test.ts
tests/auth/: basic-auth.middleware.test.ts  protected-routes.test.ts  startup-guard.test.ts
tests/cache/: cache.worker.test.ts  registry-cache.test.ts
tests/config/: config.controller.test.ts  config.schema.test.ts  config.service.test.ts  config.store.test.ts
tests/dashboard/: dashboard.service.test.ts  status.test.ts
tests/legacy-api/: artifacts.test.ts  healthz.test.ts  pages.test.ts  refresh.test.ts  (+3 more)
(+47 files in other folders)
