[package]
name = "oci-vue"
version = "0.1.0"
description = "Desktop OCI registry browser"
authors = ["Astro24002"]
edition = "2021"

[lib]
name = "oci_vue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "oci-vue"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
url = "2"

[dev-dependencies]
tempfile = "3"
